manifest/express/express-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-app-deployment
  namespace: express  # 名前空間を指定

spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
      - name: express-app
        image: ghcr.io/koizumi-yositaka/jwt-tutorial:latest
        imagePullPolicy: Always  # 常に最新のイメージを取得
        ports:
        - containerPort: 8081
