manifest/express/express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-app-service
  namespace: express
spec:
  selector:
    app: express-app  # Deploymentのラベルに一致させる
  ports:
    - protocol: TCP
      port: 8081       # 外部からアクセスするポートここい
      targetPort: 8081  # コンテナがリッスンしているポート
  type: LoadBalancer  # LoadBalancerを使用して外部に公開
