manifest/express/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: postgres
spec:
  ports:
    - port: 5434
      targetPort: 5432
  selector:
    app: postgres
  type: LoadBalancer
